--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:33:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:33:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,11 +141,11 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Luke Watson</td>
-      <td class="bigbold">-19</td>
+      <td class="bigbold">-18</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
       <td>Talor Gooch +1
@@ -157,11 +157,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-19</td>
+      <td class="bigbold">-18</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
       <td>Will Zalatoris +1
@@ -173,11 +173,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Walk 2</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
       <td>Viktor Hovland(W) +3
@@ -189,11 +189,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-17</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
       <td>Will Zalatoris +1
@@ -205,11 +205,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-16</td>
+      <td class="bigbold">-15</td>
       <td>Scottie Scheffler(W) -10
 -1 thru 3</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
       <td>Hideki Matsuyama +3
@@ -221,11 +221,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-14</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
       <td>Shane Lowry E
 +2 thru 4</td>
       <td>Viktor Hovland +3
@@ -294,42 +294,10 @@ Missed Cut</td>
 +2 thru 4</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 thru 14</td>
+      <td class="greyout leftborder">Tony Finau +5
++1 thru 15</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Tom Davis</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Dustin Johnson(W) E
--1 thru 8</td>
-      <td>Shane Lowry E
-+2 thru 4</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Louis Oosthuizen
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-10</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Rory McIlroy(W) -3
--4 thru 8</td>
-      <td>Justin Thomas -2
--1 thru 5</td>
-      <td>Hideki Matsuyama +3
-+1 thru 10</td>
-      <td class="greyout leftborder">Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Wilson</td>
@@ -348,10 +316,42 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">Tom Davis</td>
       <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Dustin Johnson(W) E
+-1 thru 8</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Louis Oosthuizen
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-9</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Rory McIlroy(W) -3
+-4 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 5</td>
+      <td>Hideki Matsuyama +3
++1 thru 10</td>
+      <td class="greyout leftborder">Tiger Woods +13
++6 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
       <td>Justin Thomas -2
@@ -365,9 +365,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Bill Hunter</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
       <td>Justin Thomas -2
@@ -381,9 +381,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Shane Lowry E
@@ -391,24 +391,8 @@ Missed Cut</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
--1 thru 15</td>
+-1 thru 16</td>
       <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">The Dub</td>
-      <td class="bigbold">-8</td>
-      <td>Scottie Scheffler -10
--1 thru 3</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
-      <td>Matthew Fitzpatrick +3
--1 thru 15</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -428,52 +412,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">The Resort</td>
+      <td class="bigbold">The Dub</td>
       <td class="bigbold">-7</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Shane Lowry E
-+2 thru 4</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Hideki Matsuyama +3
-+1 thru 10</td>
-      <td class="greyout">Jon Rahm +4
--3 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Baggy Pants</td>
-      <td class="bigbold">-7</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Shane Lowry E
-+2 thru 4</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
+      <td>Scottie Scheffler -10
+-1 thru 3</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
+      <td>Matthew Fitzpatrick +3
+-1 thru 16</td>
+      <td>Patrick Cantlay +7
 -1 (F)</td>
-      <td class="greyout">Brooks Koepka
+      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
-      <td class="bigbold">-6</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jabby</td>
@@ -492,6 +444,22 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">The Resort</td>
+      <td class="bigbold">-6</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout leftborder">Hideki Matsuyama +3
++1 thru 10</td>
+      <td class="greyout">Jon Rahm +4
+-3 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Fred Jamieson</td>
       <td class="bigbold">-6</td>
       <td>Scottie Scheffler -10
@@ -508,36 +476,36 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ron Harrington</td>
+      <td class="bigbold">Baggy Pants</td>
       <td class="bigbold">-6</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Talor Gooch +1
--2 thru 10</td>
-      <td>Hideki Matsuyama +3
-+1 thru 10</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
--3 (F)</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-5</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Corey Conners(W) -2
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Corey Conners -2
 -1 thru 6</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
-      <td>Jon Rahm +4
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
 -3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -556,12 +524,60 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">Ron Harrington</td>
       <td class="bigbold">-5</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Talor Gooch +1
+-2 thru 10</td>
+      <td>Hideki Matsuyama +3
++1 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Santorini Sunrises</td>
+      <td class="bigbold">-4</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Corey Conners(W) -2
+-1 thru 6</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">-4</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Justin Thomas -2
+-1 thru 5</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout">Tiger Woods(W) +13
++6 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Uphill into the Wind</td>
+      <td class="bigbold">-4</td>
       <td>Scottie Scheffler(W) -10
 -1 thru 3</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td>Billy Horschel +8
@@ -569,22 +585,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Glitter Girl</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td class="greyout leftborder">Bubba Watson +7
--1 (F)</td>
-      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -604,46 +604,30 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">Glitter Girl</td>
       <td class="bigbold">-3</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
       <td>Rory McIlroy -3
 -4 thru 8</td>
-      <td>Justin Thomas -2
--1 thru 5</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
+      <td>Viktor Hovland +3
 E thru 10</td>
-      <td class="greyout">Tiger Woods(W) +13
-+6 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">New Lu</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Patrick Cantlay +7
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Bubba Watson +7
 -1 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Rory McIlroy -3
 -4 thru 8</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
-      <td>Collin Morikawa(W) +1
-E thru 7</td>
+      <td>Collin Morikawa(W) E
+-1 thru 8</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td class="greyout leftborder">Tiger Woods +13
@@ -653,18 +637,34 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Rory McIlroy -3
 -4 thru 8</td>
       <td>Corey Conners -2
 -1 thru 6</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 10</td>
       <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">New Lu</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
@@ -684,6 +684,22 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">5</td>
+      <td>Corey Conners(W) -2
+-1 thru 6</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Robert MacIntyre +3
+-3 (F)</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Daniel Berger +15
++8 (F)</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">6</td>
       <td>Justin Thomas(W) -2
@@ -696,22 +712,6 @@ E thru 10</td>
 -3 (F)</td>
       <td class="greyout leftborder">Sam Burns
 Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">6</td>
-      <td>Corey Conners(W) -2
--1 thru 6</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Robert MacIntyre +3
--3 (F)</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Daniel Berger +15
-+8 (F)</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
@@ -764,26 +764,10 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">7</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td>Tiger Woods +13
-+6 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Xander Schauffele
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Walk 1</td>
-      <td class="bigbold">9</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td class="bigbold">8</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
       <td>Viktor Hovland(W) +3
@@ -796,16 +780,32 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">8</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td>Tiger Woods +13
++6 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">9</td>
+      <td class="bigbold">8</td>
       <td>Dustin Johnson(W) E
 -1 thru 8</td>
       <td>Shane Lowry E
 +2 thru 4</td>
       <td>Matthew Fitzpatrick +3
--1 thru 15</td>
-      <td>Tony Finau +6
-+2 thru 14</td>
+-1 thru 16</td>
+      <td>Tony Finau +5
++1 thru 15</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
@@ -861,9 +861,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Hosegood</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa(W) +1
-E thru 7</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa(W) E
+-1 thru 8</td>
       <td>Hideki Matsuyama +3
 +1 thru 10</td>
       <td>Jon Rahm +4
@@ -877,9 +877,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Viktor Hovland(W) +3
 E thru 10</td>
       <td>Jon Rahm +4
@@ -909,13 +909,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td class="bigbold">16</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Jon Rahm(W) +4
 -3 (F)</td>
-      <td>Tony Finau +6
-+2 thru 14</td>
+      <td>Tony Finau +5
++1 thru 15</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
