--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:33:14 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:33:57 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -140,10 +140,26 @@ body {
   </thead>
   <tbody>
     <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-11</td>
+      <td>Scottie Scheffler -10
+-1 thru 3</td>
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Will Zalatoris +1
+-1 thru 9</td>
+      <td class="greyout leftborder">Tony Finau +5
++1 thru 15</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
+    </tr>
+    <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-12</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
+      <td class="bigbold">-11</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
       <td>Rory McIlroy -3
 -4 thru 8</td>
       <td>Justin Thomas -2
@@ -156,9 +172,9 @@ E thru 10</td>
 +1 thru 16</td>
     </tr>
     <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-11</td>
-      <td>Scottie Scheffler -10
+      <td class="bigbold">Andrew Winchester</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith -7
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
@@ -166,32 +182,16 @@ E thru 10</td>
 +2 thru 4</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
-      <td class="greyout leftborder">Tony Finau +6
-+2 thru 14</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith -8
--2 thru 2</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Shane Lowry E
-+2 thru 4</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
--1 thru 15</td>
+-1 thru 16</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-9</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
+      <td class="bigbold">-8</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
       <td>Justin Thomas -2
@@ -222,12 +222,12 @@ Missed Cut</td>
     <tr>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-3</td>
-      <td>Cameron Smith(W) -8
--2 thru 2</td>
+      <td>Cameron Smith(W) -7
+-1 thru 3</td>
       <td>Rory McIlroy -3
 -4 thru 8</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -237,13 +237,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Sungjae Im -3
 +1 thru 4</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Viktor Hovland(W) +3
 E thru 10</td>
       <td class="greyout leftborder">Patrick Cantlay +7
@@ -285,15 +285,15 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">4</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Will Zalatoris +1
 -1 thru 9</td>
-      <td>Tony Finau +6
-+2 thru 14</td>
+      <td>Tony Finau +5
++1 thru 15</td>
       <td class="greyout leftborder">Daniel Berger +15
 +8 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -301,11 +301,11 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Corey Conners(W) -2
 -1 thru 6</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Robert MacIntyre +3
 -3 (F)</td>
       <td>Jon Rahm +4
@@ -317,9 +317,9 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">15</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
+      <td class="bigbold">14</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
       <td>Viktor Hovland(W) +3
 E thru 10</td>
       <td>Jon Rahm +4
@@ -329,6 +329,22 @@ E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Luke List
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Shane Tummon</td>
+      <td class="bigbold">16</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td>Tony Finau +5
++1 thru 15</td>
+      <td>Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout leftborder">Jordan Spieth
+Missed Cut</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -343,22 +359,6 @@ E thru 10</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Jordan Spieth(W)
-Missed Cut</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Shane Tummon</td>
-      <td class="bigbold">18</td>
-      <td>Collin Morikawa +1
-E thru 7</td>
-      <td>Jon Rahm(W) +4
--3 (F)</td>
-      <td>Tony Finau +6
-+2 thru 14</td>
-      <td>Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout leftborder">Jordan Spieth
 Missed Cut</td>
       <td class="greyout">Brooks Koepka
 Missed Cut</td>
