--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:36:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:37:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-18</td>
+      <td class="bigbold">-19</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
       <td>Cameron Smith(W) -7
 -1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td class="greyout leftborder">Russell Henley +5
 -2 (F)</td>
       <td class="greyout">Brooks Koepka
@@ -172,6 +172,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Mark MacKave</td>
+      <td class="bigbold">-17</td>
+      <td>Scottie Scheffler -10
+-1 thru 3</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout">Xander Schauffele(W)
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Walk 2</td>
       <td class="bigbold">-16</td>
       <td>Scottie Scheffler -10
@@ -188,30 +204,14 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Mark MacKave</td>
-      <td class="bigbold">-16</td>
-      <td>Scottie Scheffler -10
--1 thru 3</td>
-      <td>Cameron Smith -7
--1 thru 3</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Doug Muir</td>
-      <td class="bigbold">-15</td>
+      <td class="bigbold">-16</td>
       <td>Scottie Scheffler(W) -10
 -1 thru 3</td>
       <td>Cameron Smith -7
 -1 thru 3</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td>Hideki Matsuyama +3
 +1 thru 10</td>
       <td class="greyout leftborder">Xander Schauffele
@@ -285,19 +285,35 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Shane Lowry E
 +2 thru 4</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td class="greyout leftborder">Tony Finau +5
 +1 thru 15</td>
       <td class="greyout">Patrick Cantlay +7
 -1 (F)</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">-10</td>
+      <td>Scottie Scheffler(W) -10
+-1 thru 3</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Xander Schauffele
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -316,19 +332,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Matt Wilson</td>
+      <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-9</td>
-      <td>Scottie Scheffler(W) -10
+      <td>Cameron Smith -7
 -1 thru 3</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td class="greyout leftborder">Matthew Fitzpatrick +3
+-1 thru 16</td>
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -344,6 +360,22 @@ Missed Cut</td>
 +1 thru 10</td>
       <td class="greyout leftborder">Tiger Woods +13
 +6 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler -10
+-1 thru 3</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Jon Rahm(W) +4
+-3 (F)</td>
+      <td class="greyout leftborder">Webb Simpson +6
++4 thru 10</td>
       <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
@@ -380,35 +412,19 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
-      <td>Cameron Smith -7
--1 thru 3</td>
+      <td class="bigbold">Jabby</td>
+      <td class="bigbold">-7</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
-      <td>Shane Lowry E
-+2 thru 4</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Matthew Fitzpatrick +3
--1 thru 16</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler -10
--1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Jon Rahm(W) +4
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td class="greyout leftborder">Jon Rahm +4
 -3 (F)</td>
-      <td class="greyout leftborder">Webb Simpson +6
-+4 thru 10</td>
-      <td class="greyout">Xander Schauffele
+      <td class="greyout">Brooks Koepka
 Missed Cut</td>
     </tr>
     <tr>
@@ -428,20 +444,20 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Jabby</td>
+      <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-6</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
+      <td>Cameron Smith -7
+-1 thru 3</td>
       <td>Corey Conners -2
 -1 thru 6</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Jon Rahm +4
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout leftborder">Jon Rahm(W) +4
 -3 (F)</td>
-      <td class="greyout">Brooks Koepka
-Missed Cut</td>
+      <td class="greyout">Patrick Cantlay +7
+-1 (F)</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -492,20 +508,20 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Hadrian&#39;s Wall</td>
+      <td class="bigbold">Santorini Sunrises</td>
       <td class="bigbold">-5</td>
       <td>Cameron Smith -7
 -1 thru 3</td>
-      <td>Corey Conners -2
+      <td>Corey Conners(W) -2
 -1 thru 6</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout leftborder">Jon Rahm(W) +4
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Jon Rahm +4
 -3 (F)</td>
-      <td class="greyout">Patrick Cantlay +7
--1 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Lyle Rattray</td>
@@ -524,32 +540,16 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Santorini Sunrises</td>
-      <td class="bigbold">-4</td>
-      <td>Cameron Smith -7
--1 thru 3</td>
-      <td>Corey Conners(W) -2
--1 thru 6</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-4</td>
+      <td class="bigbold">-5</td>
       <td>Rory McIlroy -3
 -4 thru 8</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
       <td>Collin Morikawa E
 -1 thru 8</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td class="greyout leftborder">Viktor Hovland +3
 E thru 10</td>
       <td class="greyout">Tiger Woods(W) +13
@@ -585,6 +585,22 @@ Missed Cut</td>
       <td class="greyout leftborder">Jon Rahm(W) +4
 -3 (F)</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Grace</td>
+      <td class="bigbold">-3</td>
+      <td>Rory McIlroy -3
+-4 thru 8</td>
+      <td>Corey Conners -2
+-1 thru 6</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td class="greyout leftborder">Viktor Hovland +3
+E thru 10</td>
+      <td class="greyout">Xander Schauffele(W)
 Missed Cut</td>
     </tr>
     <tr>
@@ -636,30 +652,14 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Grace</td>
-      <td class="bigbold">-2</td>
-      <td>Rory McIlroy -3
--4 thru 8</td>
-      <td>Corey Conners -2
--1 thru 6</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td class="greyout leftborder">Viktor Hovland +3
-E thru 10</td>
-      <td class="greyout">Xander Schauffele(W)
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">New Lu</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
       <td>Cameron Smith -7
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td>Patrick Cantlay +7
 -1 (F)</td>
       <td class="greyout leftborder">Brooks Koepka
@@ -684,6 +684,22 @@ E thru 10</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Glen Wilson</td>
+      <td class="bigbold">5</td>
+      <td>Justin Thomas(W) -2
+-1 thru 5</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Viktor Hovland +3
+E thru 10</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Sam Burns
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">5</td>
       <td>Corey Conners(W) -2
@@ -700,28 +716,12 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
-      <td class="bigbold">Glen Wilson</td>
-      <td class="bigbold">6</td>
-      <td>Justin Thomas(W) -2
--1 thru 5</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Viktor Hovland +3
-E thru 10</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Sam Burns
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
       <td class="bigbold">Kash Ahmad</td>
-      <td class="bigbold">6</td>
+      <td class="bigbold">5</td>
       <td>Justin Thomas -2
 -1 thru 5</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td>Jon Rahm(W) +4
@@ -764,6 +764,22 @@ Missed Cut</td>
 Missed Cut</td>
     </tr>
     <tr>
+      <td class="bigbold">Walk 1</td>
+      <td class="bigbold">7</td>
+      <td>Collin Morikawa E
+-1 thru 8</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Viktor Hovland(W) +3
+E thru 10</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Patrick Cantlay +7
+-1 (F)</td>
+      <td class="greyout">Xander Schauffele
+Missed Cut</td>
+    </tr>
+    <tr>
       <td class="bigbold">Wild Billy Mitchell</td>
       <td class="bigbold">7</td>
       <td>Dustin Johnson(W) -1
@@ -777,22 +793,6 @@ Missed Cut</td>
       <td class="greyout leftborder">Louis Oosthuizen
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Walk 1</td>
-      <td class="bigbold">8</td>
-      <td>Collin Morikawa E
--1 thru 8</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Viktor Hovland(W) +3
-E thru 10</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Patrick Cantlay +7
--1 (F)</td>
-      <td class="greyout">Xander Schauffele
 Missed Cut</td>
     </tr>
     <tr>
