--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:36:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 10, 3:37:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,15 +141,15 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">-11</td>
+      <td class="bigbold">-12</td>
       <td>Scottie Scheffler -10
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td>Shane Lowry E
 +2 thru 4</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
       <td class="greyout leftborder">Tony Finau +5
 +1 thru 15</td>
       <td class="greyout">Patrick Cantlay +7
@@ -173,18 +173,34 @@ E thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-8</td>
+      <td class="bigbold">-9</td>
       <td>Cameron Smith -7
 -1 thru 3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Shane Lowry E
 +2 thru 4</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td class="greyout leftborder">Matthew Fitzpatrick +3
 -1 thru 16</td>
       <td class="greyout">Brooks Koepka
+Missed Cut</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-8</td>
+      <td>Scottie Scheffler(W) -10
+-1 thru 3</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
+      <td>Shane Lowry E
++2 thru 4</td>
+      <td>Jon Rahm +4
+-3 (F)</td>
+      <td class="greyout leftborder">Brooks Koepka
+Missed Cut</td>
+      <td class="greyout">Jordan Spieth
 Missed Cut</td>
     </tr>
     <tr>
@@ -199,22 +215,6 @@ Missed Cut</td>
       <td>Viktor Hovland +3
 E thru 10</td>
       <td class="greyout leftborder">Xander Schauffele
-Missed Cut</td>
-      <td class="greyout">Jordan Spieth
-Missed Cut</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">-7</td>
-      <td>Scottie Scheffler(W) -10
--1 thru 3</td>
-      <td>Shane Lowry E
-+2 thru 4</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
-      <td>Jon Rahm +4
--3 (F)</td>
-      <td class="greyout leftborder">Brooks Koepka
 Missed Cut</td>
       <td class="greyout">Jordan Spieth
 Missed Cut</td>
@@ -285,13 +285,13 @@ Missed Cut</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">4</td>
+      <td class="bigbold">3</td>
       <td>Justin Thomas(W) -2
 -1 thru 5</td>
       <td>Collin Morikawa E
 -1 thru 8</td>
-      <td>Will Zalatoris +1
--1 thru 9</td>
+      <td>Will Zalatoris E
+-2 thru 10</td>
       <td>Tony Finau +5
 +1 thru 15</td>
       <td class="greyout leftborder">Daniel Berger +15
